crates/uitest/fixtures/ty/def/alias_arg_mismatch.snap
---
source: crates/uitest/tests/ty.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty/def/alias_arg_mismatch.fe
---
error[2-0011]: incorrect number of generic arguments for `T2`; expected 1, given 2
  ┌─ alias_arg_mismatch.fe:4:8
  │
4 │     u: T2<i32, u32>,
  │        ^^ expected 1 arguments, but 2 were given

error[3-0003]: all type parameters of type alias must be given
   ┌─ alias_arg_mismatch.fe:2:8
   │
 2 │     t: T1<i32>,
   │        ^^^^^^^ expected at least 2 arguments here
   ·
12 │ type T1<T, K> = S<T, K>
   │ ----------------------- type alias defined here

error[3-0003]: all type parameters of type alias must be given
   ┌─ alias_arg_mismatch.fe:13:14
   │
12 │ type T1<T, K> = S<T, K>
   │ ----------------------- type alias defined here
13 │ type T2<T> = T1<T>
   │              ^^^^^ expected at least 2 arguments here
